--- a/style.css
+++ b/style.css
@@ -1,6 +1,6 @@
 body {
-    background-color: rgb(55, 0, 255);
-    color: blue;
+    background-color: rgb(0, 0, 255);
+    color: grey;
     font-size: 150%;
     line-height: 1.4;
 }
