--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ h1{
 
 h3{
     margin:0px;
-    color: rgb(206, 216, 167);
+    color: rgb(0, 0, 0);
 }
 
 h2{
@@ -25,12 +25,12 @@ h2{
 }
 
 a {
-    color: rgb(50, 118, 63);
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
 a:visited {
-    color: rgb(159, 192, 128);
+    color: rgb(0, 0, 0);
     text-decoration: none;
 }
 
@@ -48,7 +48,7 @@ img{
     width:70%;
     color: white;
     font-size: 110%;
-    background:gray;
+    background:white;
     padding: 4px;
     border:1px solid white;
 }
@@ -62,7 +62,7 @@ img{
 }
 
 .redacted{
-    background-color: rgb(215, 206, 199);
+    background-color: rgb(0, 0, 0);
     color:  rgb(215, 206, 199);
 }
 
